# D2C-server

./: .gitignore  LICENSE  README.md  app.py  package.txt  pyproject.toml  requirements.txt
service/: cv.py  tf.py
