[tool.poetry]
name = "D2C-server"
version = "0.1.0"
description = ""
authors = ["yuxizhe <yuxizhe2008@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.5"
opencv-python-headless = "^4.2.0"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
